# python-oop-design-patterns-and-best-practices

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.cfg  test_logs.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  checkup.yaml  simple-ci-cd.yaml
oop/: oop.py
oop/patterns/: patterns_runner.py
oop/patterns/behavioral/: chain.py  command.py  iterator.py  mediator.py  observer.py  visitor.py
oop/patterns/creational/: singleton.py  singleton_naive.py
oop/patterns/creational/abstract_factory/: code.txt  logistics.py  packagings.py  transports.py
oop/patterns/creational/builder/: builder.py
oop/patterns/creational/factory/logistic/: logistics.py  road_logistics.py  ship_logistics.py
oop/patterns/creational/factory/transport/: ship_transport.py  transport.py  truck_transport.py
oop/patterns/creational/prototype/: prototype.py
oop/patterns/creational/singleton/: singleton.py  singleton_naive.py  singleton_naive_thread_safe.py
oop/patterns/structural/: adapter.py  bridge.py  composite.py  flyweight.py  proxy.py
oop/utils/decorators/: fancy_print.py
src/: main.py
src/advance/: decarators.py  generators.py
src/oop/patterns/: patterns_runner.py
src/oop/patterns/behavioral/: chain.py  iterator.py  mediator.py  memento.py  observer.py  state.py  strategy.py  template.py  visitor.py
src/oop/patterns/creational/abstract_factory/: logistics.py  packagings.py  transports.py
src/oop/patterns/creational/builder/: advance_builder.py  builder.py
src/oop/patterns/creational/factory/logistic/: logistics.py  road_logistics.py  ship_logistics.py
src/oop/patterns/creational/factory/transport/: ship_transport.py  truck_transport.py
src/oop/patterns/creational/prototype/: prototype.py
src/oop/patterns/structural/: adapter.py  bridge.py  composite.py  decorator.py  facade.py  proxy.py
src/oop/utils/decorators/: fancy_print.py
tests/: test_pre_commit.py
tests/oop/patterns/behavioral/: test_chain.py  test_command.py  test_iterator.py  test_mediator.py  test_memento.py  test_observer.py  test_state.py  test_strategy.py  test_template.py  test_visitor.py
tests/oop/patterns/creational/: test_singleton.py  test_singleton_naive.py  test_singleton_naive_thread_safe.py
tests/oop/patterns/creational/abstract_factory/: test_logistics.py  test_packagings.py  test_transports.py
tests/oop/patterns/creational/builder/: test_builder.py
tests/oop/patterns/creational/factory/logistic/: example.txt  test_road_logistics.py  test_ship_logistics.py
tests/oop/patterns/creational/factory/transport/: test_ship_transport.py  (+1 more)
tests/oop/patterns/creational/prototype/: test_prototype.py
tests/oop/patterns/creational/singleton/: test_singleton.py  test_singleton_naive.py  test_singleton_naive_thread_safe.py
tests/oop/patterns/structural/: test_adapter.py  test_bridge.py  test_composite.py  test_decorator.py  test_facade.py  test_flyweight.py  test_logs.txt  test_proxy.py
tests/oop/utils/decorators/: test_fancy_print.py
tests/oop_tests/: test_oop_pytest.py  test_oop_unittest.py
