[tool.poetry]
name = "python-study"
version = "0.2.0"
description = ""
authors = ["Tahnasib Gafarov <tahnasibgafarov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pylint = "^3.3.1"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"
pytest = "^8.3.3"  # Kept here as a dev dependency
coverage = "^7.6.1"
build = "^1.2.2.post1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# ==== Black ====

[tool.black]
line-length = 120
target-version = ['py312']

# ==== isort ====

[tool.isort]
profile = "black"
line_length = 120
known_first_party = [
    "tests",
    "scripts",
    "hooks",
]

[tool.pylint]
max-line-length = 120
disable = [
    "too-few-public-methods",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
# TODO remove this from here because it seems not worked properly
#exclude = [
#    ".git",
#    "__pycache__",
#    ".venv"
#]
